# travel-planner

./: .gitignore  README.md  alembic.ini  config.py  database.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 423a222f4379_create_initial_tables.py
places/: crud.py  models.py  router.py  schemas.py
projects/: aic_service.py  crud.py  models.py  router.py  schemas.py
user/: crud.py  models.py  router.py  schemas.py  security.py
